<resources>
    <string name="app_name">FabApp</string>

    <string name="userInfoFile">com.simonegherardi.enricobarbieri.fabapp.userInfo</string>
    <string name="emailKey">email</string>
    <string name="phoneKey">phone</string>
    <string name="idKey">id</string>
    <string name="pictureKey">picture</string>
    <string name="passwordKey">password</string>

    <string name="profile_image">Profile Image</string>
    <string name="profile_name">Profile Name</string>
    <string name="name">Simone</string>
    <string name="surname">Gherardi</string>
    <string name="phone_number">3341810181</string>
    <string name="edit">EDIT</string>
    <string name="username">simoomis</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="personal_profile">Personal Profile</string>
    <string name="done">DONE</string>

    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="identifier">Phone or Email</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>

    <string name="image_gallery_menu_refresh_title">Refresh images</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signInFragmentLink">Already registered? Sign in</string>
    <string name="profile_button">profile button</string>
    <string name="search_button">search button</string>
    <string name="imageUploadInfo">imageUploadInfo</string>
    <string name="accept">Accept</string>
    <string name="news_feed_button">News feed button</string>
    <string name="prev">Prev</string>
    <string name="info">Info</string>
    <string name="next">Next</string>
</resources>
