<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="The profile Image"
                android:id="@+id/profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="30dp"
                android:background="@mipmap/ic_radish_spirit"
                />

            <TextView
                android:contentDescription="The profile Username"
                android:id="@+id/profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/profile_image"
                android:layout_marginTop="90dp"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_above="@id/profile_name"
                android:layout_marginBottom="50dp"
                android:text="@string/username"
                android:layout_centerInParent="true"
                android:textColor="@color/colorMidnight_blue"
                />
            <TextView
                android:contentDescription="Name"
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="Name"
                android:textColor="@color/colorBlue"
                />

            <TextView
                android:contentDescription="Surname"
                android:id="@+id/profile_namevalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_name"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_centerInParent="true"
                android:text="@string/name"
                android:textColor="@color/colorMidnight_blue"
                />

            <TextView
                android:id="@+id/profile_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_namevalue"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="25dp"
                android:contentDescription="Surname"
                android:text="Surname"
                android:textColor="@color/colorBlue" />

            <TextView
                android:contentDescription="Surname"
                android:id="@+id/profile_surnamevalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_surname"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_centerInParent="true"
                android:text="@string/surname"
                android:textColor="@color/colorMidnight_blue"
                />

            <TextView
                android:contentDescription="Surname"
                android:id="@+id/profile_phonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_surnamevalue"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="Phone"
                android:textColor="@color/colorBlue"
                />

            <TextView
                android:contentDescription="Surname"
                android:id="@+id/profile_phonenumbervalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_phonenumber"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_centerInParent="true"
                android:text="@string/phone_number"
                android:textColor="@color/colorMidnight_blue"
                />

            <Button
                android:contentDescription="EditButton"
                android:id="@+id/profile_editbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_below="@id/profile_phonenumbervalue"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="25dp"
                android:text="@string/edit"
                android:background="@color/colorCornflower_blue"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>